[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Pixel Adventure 1/Free/Items/Boxes/Box1/Idle.png" type="Texture" id=1]
[ext_resource path="res://Assets/Pixel Adventure 1/Free/Items/Boxes/Box1/Hit (28x24).png" type="Texture" id=2]
[ext_resource path="res://Interactables/Crates/BasicCrate.gd" type="Script" id=3]
[ext_resource path="res://Phase/PhaseInHitbox/PhaseInHitbox.tscn" type="PackedScene" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 28, 24 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 28, 0, 28, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 56, 0, 28, 24 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": false,
"name": "Breaking",
"speed": 15.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=5]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 10, 2 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 10, 9 )

[node name="BasicCrate" type="StaticBody2D"]
scale = Vector2( 0.5, 0.5 )
collision_mask = 0
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 4 )
animation = "Default"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )

[node name="AreasToBreakCrate" type="Node2D" parent="."]

[node name="TopArea" type="Area2D" parent="AreasToBreakCrate"]
position = Vector2( 0, -9.5 )
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreasToBreakCrate/TopArea"]
position = Vector2( 0, -2.5 )
shape = SubResource( 6 )

[node name="BtmArea" type="Area2D" parent="AreasToBreakCrate"]
position = Vector2( 0, 9.5 )
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreasToBreakCrate/BtmArea"]
position = Vector2( 0, 2.5 )
shape = SubResource( 6 )

[node name="PhaseInHitbox" parent="." instance=ExtResource( 4 )]

[node name="CollisionShape2D" parent="PhaseInHitbox" index="0"]
shape = SubResource( 7 )

[connection signal="body_entered" from="AreasToBreakCrate/TopArea" to="." method="_on_TopArea_body_entered"]
[connection signal="body_entered" from="AreasToBreakCrate/BtmArea" to="." method="_on_BtmArea_body_entered"]

[editable path="PhaseInHitbox"]
